@@ -1401,4 +1401,3 @@ EXPORTS
 	clos_standard_instance_set
 	assert_type_base_string
 	; unicode
-	; si_extended_string_concatenate
