@@ -99,6 +99,9 @@ ECL 1.0:
  - In OS X, ECL can now load shared libraries (Extension *.dylib) thanks
    to using dlopen() instead of the obsolete NSLinkModule() function.
 
+ - (CONCATENATE 'STRING ...) does no longer have an ad-hoc limit in the number
+   of strings.
+
 * Unicode:
 
  - MAKE-STRING only allowed :ELEMENT-TYPE to be one of CHARACTER, BASE-CHAR, or
@@ -134,9 +137,11 @@ ECL 1.0:
 
  - Support for hierarchical package names, as in Allegro Common-Lisp.
 
- - C functions which disappear: si_set_compiled_function_name()
+ - C functions which disappear: si_set_compiled_function_name(),
+   si_extended_string_concatenate()
 
- - Lisp functions which disappear: si-set-compiled-function-name.
+ - Lisp functions which disappear: si:set-compiled-function-name,
+   si:extended-string-concatenate.
 
  - New C functions: ecl_stream_to_handle(), ecl_base_char_code().
 
